<resources>
    <string name="app_name">ProjectOne</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="presale">Pre Sale</string>
    <string name="cashless">Cashless</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="password">Password</string>
    <string name="presale_sub">Tidak khawatir ketinggalan <br /> update film terbaru</string>
    <string name="cashless_sub">Gunakan e-wallet untuk <br /> transaksi tiket nonton</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang, <br />Angga Risky</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="name">Muhammad Ridhoi</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="batalkan">Batalkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="ewallet">E-Wallet</string>
    <string name="totalbalance">Total Balance</string>
    <string name="success_sub">Tiket telah berhasil dibeli dan <br /> selamat menikmati film</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="wallet">IDR 280.000</string>
</resources>